--- a/src/scss/object/project/p-title.scss
+++ b/src/scss/object/project/p-title.scss
@@ -1,5 +1,5 @@
-@use '../../foundation/variable/color.scss' as color;
 @use '../../foundation/variable/font-family.scss' as fontFamily;
+@use '../../foundation/variable/_theme.scss' as theme;
 
 .p-title {
   margin: 0;
@@ -10,12 +10,12 @@
   line-height: 1.1;
 
   &__link {
-    color: color.$color-text;
+    color: var(--color-text);
     text-decoration: none;
     transition: color 0.2s ease;
 
     &:hover {
-      color: color.$color-accent;
+      color: var(--color-accent);
     }
   }
 }
